--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,7 +8,7 @@ environment:
 
 install:
   - "%PYTHON%\\python.exe -m pip install --upgrade pip"
-  - "%PYTHON%\\python.exe -m pip install pyinstaller psycopg2-binary selenium selenium-stealth aiohttp"
+  - "%PYTHON%\\python.exe -m pip install pyinstaller psycopg2-binary selenium selenium-stealth aiohttp httpx"
 
 build_script:
   - "%PYTHON%\\python.exe -m PyInstaller --onefile --windowed --name ZaloVideoUploader gui_app.py"
